--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta name="robots" content="noindex, nofollow" />
   <title>Em Breve</title>
   <style>
     body { font-family: sans-serif; text-align: center; margin-top: 100px; }
